--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "shelpers",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "url": "https://github.com/serikshaikamalov/shelpers.git"
+  }
 }
